# jobfit

./: .dockerignore  .env.example  .gitignore  AGENTS.md  COUSE_PROJECT_OVERVIEW.md  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  openapi.yaml  render.yaml
.github/workflows/: ci.yml
backend/: POSTGRES_GUIDE.md  README.md  VALIDATION.md  agent.py  check_tools_path.py  config.py  database.py  logger.py  main.py  migrate_add_is_selected.py  migrate_resumes.py  migrate_strip_fences.py  migrations.py  models.py  prompts.py  pyproject.toml  repro_mock.py  tools.py
backend/tests/: conftest.py  test_api.py  test_logger.py  test_tools.py
data/: jobfit.db.bak  jobfit.premigration.bak
frontend/: README.md  VALIDATION.md  index.html  lint_results.txt  package-lock.json  package.json  tailwind.config.ts  test_output.txt  test_results.txt  tsconfig.node.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ApplicationTable.tsx  Header.tsx  MatchScoreBadge.tsx  ResumeEditor.tsx  ResumeSelector.tsx  RichTextEditor.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  JobDetail.tsx  NewApplication.tsx  UploadResume.tsx
frontend/src/test/: Dashboard.test.tsx  JobDetail.test.tsx  NewApplication.test.tsx  ResumeEditor.test.tsx  ResumeSelector.test.tsx  ThemeToggle.test.tsx  UploadResume.test.tsx  api.test.ts
src/: index.css
src/components/: ApplicationTable.tsx  Header.tsx  MatchScoreBadge.tsx
src/lib/: api.ts
src/pages/: Dashboard.tsx  JobDetail.tsx  NewApplication.tsx
src/types/: index.ts
(+1 files in other folders)
